# c-train-litchfeild

./: CMakeLists.txt  README.md  export_option_a.ps1  vcpkg.json
cmake/: BuildStats.cmake  FetchLibvterm.cmake  FetchUV.cmake  LinuxGuiSanity.cmake  config.h.in
src/core/: CMakeLists.txt  animatable_property.cpp  argument_parser.cpp  camera.cpp  checkpoint_format.cpp  cuda_alloc_tracker.cpp  cuda_version.cpp  image_io.cpp  image_loader.cpp  mesh_data.cpp  observable.hpp  operator_callbacks.cpp  parameters.cpp  path_utils.hpp  property_registry.cpp  scene.cpp  splat_data.cpp  splat_simplify.cpp  tensor_debug.cpp
src/core/cuda/: CMakeLists.txt  memory_arena.cu  memory_arena.hpp
src/core/cuda/kernels/: kdtree_kmeans.hpp  selection_ops.cu
src/core/cuda/undistort/: undistort.cu  undistort.hpp
src/core/event_bridge/: CMakeLists.txt  control_boundary.cpp  event_bridge.cpp  event_bridge.hpp  localization_manager.cpp  localization_manager.hpp
src/core/include/core/: animatable_property.hpp  argument_parser.hpp  base64.hpp  camera.hpp  camera_types.h  checkpoint_format.hpp  cuda_alloc_tracker.hpp  cuda_version.hpp  events.hpp  executable_path.hpp  export.hpp  gradient_check.hpp  image_io.hpp  image_loader.hpp  material.hpp  mesh_data.hpp  modal_event.hpp  operator_callbacks.hpp  parameters.hpp  pinned_memory_allocator.hpp  property_registry.hpp  property_system.hpp  property_traits.hpp  scene.hpp  splat_data.hpp  splat_data_mirror.hpp  splat_data_transform.hpp  splat_simplify.hpp  splat_simplify_history.hpp  splat_simplify_types.hpp  tensor_debug.hpp  tensor_fwd.hpp  tensor_trace.hpp  training_snapshot.hpp
src/core/include/core/cuda/: selection_ops.hpp
src/core/include/dlpack/: dlpack.h
src/core/logger/: CMakeLists.txt
src/core/tensor/: gpu_slab_allocator.cpp  lazy_executor.cpp  pinned_memory_allocator.cpp  tensor.cpp  tensor_broadcast.cpp  tensor_broadcast_ops.cu  tensor_factory.cpp  tensor_fused_pointwise.cu  tensor_masking_ops.cpp  tensor_masking_ops.cu  tensor_shape_ops.cpp  tensor_unified_ops.cpp  tensor_utils.cpp
src/core/tensor/internal/: allocation_profiler.hpp  cuda_stream_context.hpp  deferred_free_queue.hpp  gpu_arena_allocator.hpp  gpu_slab_allocator.hpp  size_bucketed_pool.hpp  tensor_expr.hpp  tensor_impl.hpp  tensor_ops.hpp
src/geometry/: CMakeLists.txt  geometry_misc.cpp
src/geometry/include/geometry/: geometry_misc.hpp
src/io/: CMakeLists.txt  cache_image_loader.cpp  loader.cpp  loader_interface.hpp  loader_registry.hpp  loader_service.cpp  loader_service.hpp  nvcodec_image_loader.cpp  nvcodec_image_loader.hpp  pipelined_image_loader.cpp  stb_image_impl.cpp  tinyply.cpp  video_frame_extractor.cpp  video_frame_extractor.hpp  video_player.cpp  video_player.hpp
src/io/cuda/: image_format_kernels.cu  image_format_kernels.cuh
src/io/formats/: html.cpp  html.hpp  html_viewer_resources.hpp  nurec_usdz.cpp  nurec_usdz.hpp  rad.cpp  rad.hpp  sogs.hpp  spz.cpp  usd.cpp  usd.hpp
src/io/include/io/: cache_image_loader.hpp  error.hpp  exporter.hpp  loader.hpp  ply_export_internal.hpp
src/io/include/io/video/: video_encoder_interface.hpp  video_export_options.hpp
src/io/loaders/: blender_loader.cpp  blender_loader.hpp  checkpoint_loader.cpp  checkpoint_loader.hpp  colmap_loader.cpp  colmap_loader.hpp  loader_utils.hpp  mesh_loader.hpp  ply_loader.hpp  sogs_loader.hpp  usd_loader.cpp  usd_loader.hpp
src/io/mesh/: openmesh_bridge.cpp  openmesh_bridge.hpp  texture_loader.cpp  texture_loader.hpp
src/io/video/: color_convert.cu  color_convert.cuh  video_encoder.cpp  video_encoder.hpp
src/python/: runner.hpp
src/training/: CMakeLists.txt  checkpoint.cpp  checkpoint.hpp  dataset.hpp  progress.hpp  trainer.cpp  trainer.hpp  training_setup.cpp
src/training/components/: bilateral_grid.cpp  bilateral_grid.hpp  ppisp.cpp  ppisp.hpp  ppisp_controller.cu  ppisp_controller.hpp  ppisp_controller_pool.cu  ppisp_controller_pool.hpp  ppisp_file.cpp  ppisp_file.hpp  sparsity_optimizer.cpp  sparsity_optimizer.hpp  sparsity_optimizer_kernels.cu
src/training/control/: command_api.cpp  command_api.hpp  control_boundary.cpp
src/training/include/lfs/core/: memory_ops.cuh
src/training/include/lfs/kernels/: bilateral_grid.cuh  l1_loss.cuh  regularization.cuh  ssim.cuh  ssim_reduction.cuh
src/training/kernels/: bilateral_grid_backward.cu  bilateral_grid_forward.cu  bilateral_grid_tv.cu  camera_loss_heatmap.cu  camera_loss_heatmap.cuh  densification_kernels.cu  densification_kernels.hpp  image_kernels.cu  image_kernels.hpp  l1_loss.cu  mcmc_kernels.cu  mcmc_kernels.hpp  ppisp.cu  pruning_kernels.cu  pruning_kernels.hpp  regularization.cu  ssim.cu  ssim_reduction.cu
src/training/losses/: photometric_loss.cpp  regularization.cpp  regularization.hpp
src/training/metrics/: metrics.cpp  metrics.hpp
src/training/optimizer/: adam_optimizer.cpp  adam_optimizer.hpp  render_output.hpp  scheduler.cpp  scheduler.hpp
src/training/rasterization/: edge_rasterizer.cpp  edge_rasterizer.hpp  fast_rasterizer.cpp  fast_rasterizer.hpp  gsplat_rasterizer.hpp
src/training/rasterization/edge_compute/: CMakeLists.txt
src/training/rasterization/edge_compute/rasterization/include/: buffer_utils.h  edge_rasterization_api.h  edge_rasterization_config.h  forward.h  kernel_utils.cuh  kernels_forward.cuh
src/training/rasterization/edge_compute/utils/: cuda_utils.h
src/training/rasterization/fastgs/: CMakeLists.txt
src/training/rasterization/fastgs/rasterization/include/: forward.h  (+8 more)
src/training/rasterization/gsplat/: CMakeLists.txt  Cameras.cuh  Common.h  IntersectTile.cu  Ops.h  Projection.cpp  Projection.h  QuatToRotmat.cpp  QuatToRotmat.h  QuatToRotmatCUDA.cu  Rasterization.cpp  Rasterization.h  RasterizeToPixelsFromWorld3DGSBwd.cu  Relocation.cpp  Relocation.h  RelocationCUDA.cu  SphericalHarmonics.cpp  SphericalHarmonics.h
src/training/strategies/: improved_gs_plus.cpp  istrategy.hpp  mcmc.cpp  mcmc.hpp  mrnf.cpp  mrnf.hpp  strategy_factory.cpp  strategy_factory.hpp  strategy_utils.cpp  strategy_utils.hpp
stubs/: python_runner_stub.cpp
tools/: train_colmap_headless.cpp
(+6 files in other folders)
